--- a/build.gradle
+++ b/build.gradle
@@ -43,7 +43,7 @@ test {
 }
 
 application {
-    mainClassName = "duke.Duke"
+    mainClassName = "duke.Main"
 }
 
 shadowJar {
@@ -53,6 +53,7 @@ shadowJar {
 
 run{
     standardInput = System.in
+    enableAssertions = true
 }
 
 checkstyle {
