--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -3,13 +3,22 @@ name: Java CI
 on: [push, pull_request]
 
 jobs:
-  build:
-    strategy:
-      matrix:
-        platform: [ubuntu-latest, macos-latest, windows-latest]
-    runs-on: ${{ matrix.platform }}
-
+  build-gradle-project:
+    runs-on: macos-latest
     steps:
+      - name: Checkout project sources
+        uses: actions/checkout@v2
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
+      - name: Run build with Gradle Wrapper
+        run: ./gradlew build
+#  build:
+#    strategy:
+#      matrix:
+#        platform: [ubuntu-latest, macos-latest, windows-latest]
+#    runs-on: ${{ matrix.platform }}
+#
+#    steps:
 #      - name: Set up repository
 #        uses: actions/checkout@master
 #
@@ -32,13 +41,6 @@ jobs:
 #
 #      - name: Build and check with Gradle
 #        run: ./gradlew check
-
-      - name: Checkout project sources
-        uses: actions/checkout@v2
-      - name: Setup Gradle
-        uses: gradle/gradle-build-action@v2
-      - name: Run build with Gradle Wrapper
-        run: ./gradlew build
 
 #      - name: Perform IO redirection test (*NIX)
 #        if: runner.os == 'Linux'
