--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -32,19 +32,10 @@ jobs:
 
       - name: Build and check with Gradle
         run: ./gradlew check
-
-#      - name: Perform IO redirection test (*NIX)
-#        if: runner.os == 'Linux'
-#        working-directory:  ${{ github.workspace }}/text-ui-test
-#        run: ./runtest.sh
-#
-#      - name: Perform IO redirection test (MacOS)
-#        if: always() && runner.os == 'macOS'
-#        working-directory:  ${{ github.workspace }}/text-ui-test
-#        run: ./runtest.sh
-#
-#      - name: Perform IO redirection test (Windows)
-#        if: always() && runner.os == 'Windows'
-#        working-directory:  ${{ github.workspace }}/text-ui-test
-#        shell: cmd
-#        run: runtest.bat
+        
+      - name: Run check style
+        uses: nikitasavinov/checkstyle-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          reporter: 'github-pr-check'
+          tool_name: 'testtool'
