--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,10 @@ plugins {
     id 'org.openjfx.javafxplugin' version '0.0.13'
 }
 
+checkstyle {
+    toolVersion = '10.2'
+}
+
 javafx {
     version = "19"
     modules = [ 'javafx.controls', 'javafx.fxml' ]
