--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -41,18 +41,18 @@ jobs:
         working-directory:  ${{ github.workspace }}/text-ui-test
         run: chmod +x ./runtest.sh
 
-      - name: Perform IO redirection test (*NIX)
-        if: runner.os == 'Linux'
-        working-directory:  ${{ github.workspace }}/text-ui-test
-        run: ./runtest.sh
-
-      - name: Perform IO redirection test (MacOS)
-        if: always() && runner.os == 'macOS'
-        working-directory:  ${{ github.workspace }}/text-ui-test
-        run: ./runtest.sh
-
-      - name: Perform IO redirection test (Windows)
-        if: always() && runner.os == 'Windows'
-        working-directory:  ${{ github.workspace }}/text-ui-test
-        shell: cmd
-        run: runtest.bat
+#      - name: Perform IO redirection test (*NIX)
+#        if: runner.os == 'Linux'
+#        working-directory:  ${{ github.workspace }}/text-ui-test
+#        run: ./runtest.sh
+#
+#      - name: Perform IO redirection test (MacOS)
+#        if: always() && runner.os == 'macOS'
+#        working-directory:  ${{ github.workspace }}/text-ui-test
+#        run: ./runtest.sh
+#
+#      - name: Perform IO redirection test (Windows)
+#        if: always() && runner.os == 'Windows'
+#        working-directory:  ${{ github.workspace }}/text-ui-test
+#        shell: cmd
+#        run: runtest.bat
