--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -15,7 +15,6 @@ on:
 
 permissions:
   contents: read
-
 jobs:
   build:
     strategy:
@@ -24,39 +23,33 @@ jobs:
     runs-on: ${{ matrix.platform }}
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 11
-      uses: actions/setup-java@v3
-      with:
-        java-version: '11'
-        distribution: 'temurin'
-        java-package: jdk+fx
-    
-    - name: Set up repository
-      uses: actions/checkout@master
+      - name: Set up repository
+        uses: actions/checkout@master
 
-    - name: Set up repository
-      uses: actions/checkout@master
-      with:
-        ref: master
+      - name: Set up repository
+        uses: actions/checkout@master
+        with:
+          ref: master
 
-    - name: Merge to master
-      run: git checkout --progress --force ${{ github.sha }}
+      - name: Merge to master
+        run: git checkout --progress --force ${{ github.sha }}
 
-    - name: Validate Gradle Wrapper
-      uses: gradle/wrapper-validation-action@v1
-      
-    
-      
-    - name: Build with Gradle
-      uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
-      with:
-        arguments: build
-    
-    - name: First interaction
-      uses: actions/first-interaction@v1.1.1
-      with:
-        # Comment to post on an individual's first issue
-        issue-message: Congratulations on your first issue!!
-        # Comment to post on an individual's first pull request
-        pr-message: Thank you for your first pull request!
+      - name: Validate Gradle Wrapper
+        uses: gradle/wrapper-validation-action@v1
+
+      - name: Setup JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: '11'
+          java-package: jdk+fx
+
+      - name: Build and check with Gradle
+        run: ./gradlew check
+
+      - name: First interaction
+        uses: actions/first-interaction@v1.1.1
+        with:
+          # Comment to post on an individual's first issue
+          issue-message: Congratulations on your first issue!!
+          # Comment to post on an individual's first pull request
+          pr-message: Thank you for your first pull request!
