--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -49,6 +49,8 @@ jobs:
       - name: First interaction
         uses: actions/first-interaction@v1.1.1
         with:
+         # Token for the repository. Can be passed in using {{ secrets.GITHUB_TOKEN }}
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
           # Comment to post on an individual's first issue
           issue-message: Congratulations on your first issue!!
           # Comment to post on an individual's first pull request
