--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -31,17 +31,7 @@ jobs:
           java-package: jdk+fx
 
       - name: Build and check with Gradle
-        run: ./gradlew check
-
-      - name: Perform IO redirection test (*NIX)
-        if: runner.os == 'Linux'
-        working-directory:  ${{ github.workspace }}/text-ui-test
-        run: ./runtest.sh
-
-      - name: Perform IO redirection test (MacOS)
-        if: always() && runner.os == 'macOS'
-        working-directory:  ${{ github.workspace }}/text-ui-test
-        run: ./runtest.sh
+        run: ./gradlew checkstyleMain checkstyleTest Test
 
       - name: Perform IO redirection test (Windows)
         if: always() && runner.os == 'Windows'
