--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,8 +14,8 @@ jobs:
       - name: Setup JDK 11
         uses: actions/setup-java@v3
         with:
+          distribution: 'temurin'
           java-version: '11'
-          java-package: jdk+fx
 
       - name: Setup and test with Gradle
         uses: gradle/gradle-build-action@v2
