--- a/build.gradle
+++ b/build.gradle
@@ -54,7 +54,7 @@ dependencies {
 }
 
 application {
-    mainClassName = "seedu.duke.Duke"
+    mainClassName = "seedu.duke.Main"
 }
 
 shadowJar {
@@ -64,4 +64,5 @@ shadowJar {
 
 run{
     standardInput = System.in
+    enableAssertions = true
 }
