--- a/build.gradle
+++ b/build.gradle
@@ -28,11 +28,11 @@ test {
 }
 
 application {
-    mainClassName = "seedu.duke.Duke"
+    mainClassName = "wessy.Wessy"
 }
 
 shadowJar {
-    archiveBaseName = "duke"
+    archiveBaseName = "wessy"
     archiveClassifier = null
 }
 
