--- a/build.gradle
+++ b/build.gradle
@@ -44,12 +44,12 @@ test {
 }
 
 application {
-    mainClassName = "seedu.duke.Duke"
+    mainClassName = "seedu.duke.Launcher"
 }
 
 shadowJar {
     archiveBaseName = "duke"
-    mainClassName = "duke.Duke"
+    mainClassName = "duke.Launcher"
     archiveClassifier = null
 }
 
