--- a/build.gradle
+++ b/build.gradle
@@ -48,8 +48,7 @@ test {
 }
 
 application {
-    mainClassName = "duke.Duke"
-//    mainClassName = "duke.Launcher"
+    mainClassName = "duke.Launcher"
 }
 
 shadowJar {
