--- a/build.gradle
+++ b/build.gradle
@@ -44,16 +44,17 @@ test {
 }
 
 application {
-    mainClassName = "duke.Duke"
+    mainClassName = "duke.Launcher"
 }
 
 shadowJar {
-    archiveBaseName = "PandoraApp"
+    archiveBaseName = "PandoraBot"
     archiveClassifier = null
 }
 
 run{
     standardInput = System.in
+    enableAssertions = true
 }
 
 checkstyle {
