--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,3 +2,4 @@ remote_theme: pages-themes/time-machine@v0.2.0
 plugins:
 - jekyll-remote-theme
 title: [Colette Chatbot]
+description: [A chatbot designed to help you manage all the tasks that you need to complete!]
