--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,9 @@ dependencies {
 }
 
 test {
+
+
+
     useJUnitPlatform()
 
     testLogging {
@@ -34,15 +37,20 @@ application {
 sourceSets {
     main {
         resources {
-            srcDir 'src/main/resources'
+            srcDir './src/main/resources'
         }
     }
 }
 
+tasks.withType(Copy).all {
+    duplicatesStrategy 'exclude'
+}
+
 shadowJar {
-    from("src/main/resources"){
+    /*from("src/main/resources"){
         into 'META-INF/resources'
-    }
+    }*/
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
     archiveBaseName = "duke"
     archiveClassifier = null
 }
