--- a/build.gradle
+++ b/build.gradle
@@ -42,11 +42,11 @@ test {
 }
 
 application {
-    mainClassName = "Duke"
+    mainClassName = "Launcher"
 }
 
 shadowJar {
-    archiveBaseName = "duke"
+    archiveBaseName = "Pepev1.0"
     archiveClassifier = null
 }
 
