--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,6 @@ test {
 
     testLogging {
         events "passed", "skipped", "failed"
-
         showExceptions true
         exceptionFormat "full"
         showCauses true
@@ -43,7 +42,7 @@ test {
 }
 
 application {
-    mainClassName = "babe.Babe"
+    mainClassName = "babe.Launcher"
 }
 
 shadowJar {
