--- a/.gitignore
+++ b/.gitignore
@@ -14,12 +14,10 @@ src/main/resources/docs/
 /bin/
 
 # text-ui-test
-/text-ui-test/ACTUAL.TXT
-/text-ui-test/EXPECTED-UNIX.TXT
+/text-ui-test/
 
 # Data
-data/
+/data/
 
 # Miscellaneous
 /CONTRIBUTORS.md
-text-ui-test/
