--- a/build.gradle
+++ b/build.gradle
@@ -28,11 +28,11 @@ test {
 }
 
 application {
-    mainClassName = "seedu.duke.Duke"
+    mainClassName = "baymax.Baymax"
 }
 
 shadowJar {
-    archiveBaseName = "duke"
+    archiveBaseName = "baymax"
     archiveClassifier = null
 }
 
