--- a/build.gradle
+++ b/build.gradle
@@ -45,7 +45,7 @@ test {
 }
 
 application {
-    mainClassName = "duke.Duke"
+    mainClassName = "duke.Launch"
 }
 
 shadowJar {
@@ -55,6 +55,8 @@ shadowJar {
 
 run{
     standardInput = System.in
+    enableAssertions = true
+
 }
 
 checkstyle {
